--- a/backend/templates/contact_reply.html
+++ b/backend/templates/contact_reply.html
@@ -162,9 +162,9 @@
     <div class="container">
         <div class="header">
             <div class="logo-container">
-                <a href="#" class="logo">FCIT Developers Club</a>
+                <a href="#" class="logo">Taakra 2026</a>
             </div>
-            <h1>Contact Form Reply - FCIT Developers Club</h1>
+            <h1>Contact Form Reply - Taakra 2026</h1>
         </div>
         
         <div class="content">
@@ -199,8 +199,8 @@
         </div>
            
         <div class="footer">
-            <p>This is an automated message from the FCIT Developers Club website. Please do not reply to this email.</p>
-            <p>© {{year}} FCIT Developers Club. All rights reserved.</p>
+            <p>This is an automated message from the Taakra 2026 website. Please do not reply to this email.</p>
+            <p>© {{year}} Taakra 2026. All rights reserved.</p>
         </div>
     </div>
 </body>
