--- a/backend/templates/new_registration_admin_notification.html
+++ b/backend/templates/new_registration_admin_notification.html
@@ -81,7 +81,7 @@
     <div class="container">
         <div class="header">
             <div class="logo-container">
-                <span class="logo">FCIT Developers Club</span>
+                <span class="logo">Taakra 2026</span>
             </div>
             <h1>New Event Registration</h1>
         </div>
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div class="footer">
-            &copy; {{ year }} FCIT Developers Club. All rights reserved.
+            &copy; {{ year }} Taakra 2026. All rights reserved.
         </div>
     </div>
 </body>
