--- a/backend/templates/blog_comment_notification.html
+++ b/backend/templates/blog_comment_notification.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Blog Comment - FCIT Developers Club</title>
+    <title>New Blog Comment - Taakra 2026</title>
     <style>
         * {
             margin: 0;
@@ -164,7 +164,7 @@
     <div class="container">
         <div class="header">
             <div class="logo-container">
-                <a href="#" class="logo">FCIT Developers Club</a>
+                <a href="#" class="logo">Taakra 2026</a>
             </div>
             <h1>New Blog Comment Received</h1>
         </div>
@@ -210,13 +210,13 @@
 
             <div class="closing">
                 <p>Thank you,</p>
-                <p><strong>FCIT Developers Club Team</strong></p>
+                <p><strong>Taakra 2026 Team</strong></p>
             </div>
         </div>
         
         <div class="footer">
-            <p>This is an automated notification from the FCIT Developers Club blog system.</p>
-            <p>© {{year}} FCIT Developers Club. All rights reserved.</p>
+            <p>This is an automated notification from the Taakra 2026 blog system.</p>
+            <p>© {{year}} Taakra 2026. All rights reserved.</p>
         </div>
     </div>
 </body>
