--- a/backend/templates/contact_notification.html
+++ b/backend/templates/contact_notification.html
@@ -147,7 +147,7 @@
     <div class="container">
         <div class="header">
             <div class="logo-container">
-                <a href="#" class="logo">FCIT Developers Club</a>
+                <a href="#" class="logo">Taakra 2026</a>
             </div>
             <h1>New Contact Form Submission</h1>
         </div>
@@ -184,8 +184,8 @@
         </div>
         
         <div class="footer">
-            <p>This is an automated message from the FCIT Developers Club website. Please do not reply to this email.</p>
-            <p>© {{year}} FCIT Developers Club. All rights reserved.</p>
+            <p>This is an automated message from the Taakra 2026 website. Please do not reply to this email.</p>
+            <p>© {{year}} Taakra 2026. All rights reserved.</p>
         </div>
     </div>
 </body>
